# co-novel

./: .env  .gitignore  README.md  test_chapter_position.py  test_fix.html  test_save_chapter.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_api.py  test_business_logic.py  test_outline.py  test_title.py  test_workflow.py
backend/models/: base.py  novel.py
backend/routers/: ai.py
backend/services/: ai_service.py  data_service.py  novel_service.py
backend/utils/: error_handler.py
docs/: API.md  ARCHITECTURE.md  章节保存功能说明.md  章节序号和位置管理功能说明.md
frontend/: index.html  package.json  pnpm-lock.yaml  theme-test.html  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/composables/: useCreationState.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/styles/: README.md  create.scss  element-plus.scss  global.scss  home.scss  index.scss  layout.scss
frontend/src/types/: index.d.ts
frontend/src/views/: Create.vue  Home.vue
